compile_fail_tests/map/more_arrays_than_params.rs
use const_tools::map;

const fn test<T, const N: usize>(a: [T; N], b: [T; N]) -> [T; N] {
    map!(zip!(a, b), |(a,)| a)
}

fn main() {}
